--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,5 +1,6 @@
 *{
     /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 
 .max-w-h-cate-in-home-1-4{
@@ -14,7 +15,6 @@
 
 .half, .half .container > .row {
   height: 80vh;
-  /* min-height: 700px; */
 }
 .half .bg {
   height: 200px;
@@ -148,6 +148,6 @@
   opacity: 0.2;
 }
 
-.shadow-customize{
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+.shadow-customize{-webkit-box-shadow: 0px 5px 5px -2px rgba(0,0,0,0.56); 
+  box-shadow: 0px 5px 5px -2px rgba(0,0,0,0.56);
 }
