--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -37,7 +37,7 @@
 }
 .half .contents .form-control, .half .bg .form-control {
   border: none;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   height: 54px;
   background: #efefef;
 }
